--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ body{
 }
 
 @keyframes slide{
-    from {width:0px; height:0px;}
-    to {width:110px; height:110px;}
+    from {width:0px; height:0px; margin-top: 80px;}
+    to {width:110px; height:110px; margin-top: 0%;}
 }
 
 #game-info{
